--- a/resources/sass/UI/nav.scss
+++ b/resources/sass/UI/nav.scss
@@ -1,7 +1,7 @@
 .header__nav {
   display: flex;
   justify-content: space-between;
-  max-width: 617px;
+  max-width: 740px;
   width: 100%;
 }
 
@@ -12,9 +12,10 @@
   margin: auto;
   padding: 0 10px;
   max-height: 200px;
-  background-color: #00110A;
+  background-color: $bg-white;
+  list-style-type: none;
 
-  @media (max-width: $px850) {
+  @media (max-width: $px1024) {
     max-height: 0;
     min-height: 0;
     overflow: hidden;
@@ -38,9 +39,9 @@
   }
 
   a {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 44px;
+    font-weight: 700;
+    font-size: 19px;
+    line-height: 24px;
     transition: all .15s ease;
   }
 }
