--- a/resources/sass/utils/_index.scss
+++ b/resources/sass/utils/_index.scss
@@ -1,5 +1,5 @@
-// @import "vars";
+@import "vars";
 // @import "normalize";
 // @import "reset";
-// @import "base";
+@import "base";
 @import "breakpoints.scss";
