--- a/resources/src/assets/scss/_index.scss
+++ b/resources/src/assets/scss/_index.scss
@@ -2,6 +2,6 @@
 // @import "layouts/_index";
 @import "UI/_index";
 // @import "layouts/section.scss";
-// @import "sections/_index.scss";
+@import "sections/_index.scss";
 @import "components/_index";
 //@import "sections/_index";
