--- a/resources/src/assets/scss/components/_index.scss
+++ b/resources/src/assets/scss/components/_index.scss
@@ -1,5 +1,5 @@
 @import 'header.scss';
 @import 'main.scss';
 @import 'burger.scss';
-@import 'hero.scss';
+// @import 'hero.scss';
 @import 'section.scss';
