--- a/resources/src/assets/scss/utils/base.scss
+++ b/resources/src/assets/scss/utils/base.scss
@@ -1,12 +1,12 @@
 @import './breakpoints.scss';
 // @import './vars.scss';
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    // color: #fff;
-}
+// * {
+//     margin: 0;
+//     padding: 0;
+//     box-sizing: border-box;
+//     // color: #fff;
+// }
 
 /* Скролл бар */
 * {
@@ -47,93 +47,21 @@ body {
     padding-bottom: 20px;
 }
 
-button {
-    cursor: pointer;
+section {
+    // outline: 1px solid red;
     position: relative;
-}
+    padding: 0 30px;
 
-
-h1,h2 {
-    font-family: "Slovic";
-    color: $font-brown;
-}
-
-h3, h4 {
-    color: $font-brown;
-}
-
-h1 {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 60px;
-    line-height: 72px;
-    letter-spacing: 0.7px;
-
-    @media (max-width: $px1024) {
-        font-weight: 700;
-        font-size: 40px;
-        line-height: 48px;
-    }
 
     @media (max-width: $px768) {
-        font-weight: 700;
-        font-size: 60px;
-        line-height: 72px;
-        text-align: center;
+        padding: 0 20px;
     }
 
-    @media (max-width: $px480) {
-        font-weight: 700;
-        font-size: 60px;
-        line-height: 72px;
-        text-align: center;
-    }
-
-    @media (max-width: $px360) {
-        font-weight: 700;
-        font-size: 40px;
-        line-height: 48px;
-    }
 }
 
-h2 {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 58px;
-    letter-spacing: 0.7px;
-    z-index: 1;
-    position: relative;
-}
-
-h4 {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 140%;
-    letter-spacing: 0.9px;
-
-}
-
-p {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 140%;
-}
 
 body.lock {
     overflow: hidden;
-}
-
-a {
-    text-decoration: none;
-    color: $font-black;
-    font-family: "Merriweather Sans";
-
-    &:hover {
-        color: $font-brown;
-    }
 }
 
 .containers {
@@ -172,11 +100,13 @@ a {
 
 .mask {
     z-index: 0;
-    background-size: 1920px;    
+    background-size: 1920px;
     background-repeat: no-repeat;
+
     @media (max-width: $px1024) {
         background: none;
     }
+
     @media (min-width: 1921px) {
         background-size: 100%;
     }
@@ -197,63 +127,6 @@ a {
     background-position: 50% 101%;
 }
 
-.ellipse {
-    z-index: 0;
-    position: absolute;
-    width: 300px;
-    height: 300px;
-    background: linear-gradient(93.58deg, #00AA30 0%, #00D03A 100%);
-}
-
-.ellipse1 {
-    filter: blur(250px);
-}
-
-.ellipse2,
-.ellipse3,
-.ellipse4 {
-    filter: blur(300px);
-}
-
-
-.dot {
-    z-index: 0;
-    position: absolute;
-
-    @media (max-width: $px1024) {
-        display: none;
-    }
-}
-
-.ellipse-img {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.btn-cta {
-    width: 181px;
-    height: 55px;
-    background: linear-gradient(93.58deg, #00AA30 0%, #00D03A 100%);
-    border-radius: 8px;
-    font-family: 'Alumni Sans';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 24px;
-    line-height: 29px;
-    color: #fff;
-    transition: all 0.4s;
-
-    &:hover {
-        background: linear-gradient(273.58deg, #008024 0%, #00AE31 100%);
-    }
-
-    &:disabled {
-        background: #AEC4B4;
-        cursor: unset;
-    }
-}
-
 body.modal-open {
     height: 100vh;
     overflow-y: hidden;
@@ -268,11 +141,94 @@ body.modal-open {
 }
 
 .dot,
-.ellipse, img
- {
+.ellipse,
+img {
     user-select: none;
     -moz-user-select: none;
     -khtml-user-select: none;
     -webkit-user-select: none;
     -o-user-select: none;
+}
+
+a {
+    text-decoration: none;
+    color: $font-black;
+    font-family: "Merriweather Sans";
+
+    &:hover {
+        color: $font-brown;
+    }
+}
+
+button {
+    cursor: pointer;
+    position: relative;
+}
+
+
+h1,
+h2 {
+    font-family: "Slovic";
+    color: $font-brown;
+}
+
+h3,
+h4 {
+    color: $font-brown;
+}
+
+h1 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 75px;
+    line-height: 130%;
+    // letter-spacing: 0.7px;
+
+    // @media (max-width: $px1024) {
+    //     font-size: 40px;
+    //     line-height: 48px;
+    // }
+
+    // @media (max-width: $px768) {
+    //     font-size: 60px;
+    //     line-height: 72px;
+    //     text-align: center;
+    // }
+
+    @media (max-width: $px480) {
+        font-weight: 500;
+        font-size: 50px;
+        line-height: 130%;
+        text-align: center;
+    }
+
+    @media (max-width: $px360) {
+        font-size: 40px;
+        line-height: 48px;
+    }
+}
+
+h2 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 58px;
+    letter-spacing: 0.7px;
+    z-index: 1;
+    position: relative;
+}
+
+h4 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 140%;
+    letter-spacing: 0.9px;
+}
+
+p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 140%;
 }
