--- a/resources/src/assets/scss/sections/_index.scss
+++ b/resources/src/assets/scss/sections/_index.scss
@@ -1,8 +1,8 @@
 @import "hero";
+@import 'about';
 // @import "advantages";
 // @import "services";
 // @import "stages";
-// @import 'about';
 // @import 'certificate';
 // @import 'contacts';
 // @import 'politics';
