--- a/resources/src/assets/scss/utils/base.scss
+++ b/resources/src/assets/scss/utils/base.scss
@@ -50,11 +50,11 @@ body {
 section {
     // outline: 1px solid red;
     position: relative;
-    padding: 0 30px;
+    // padding: 0 30px;
 
 
     @media (max-width: $px768) {
-        padding: 0 20px;
+        // padding: 0 20px;
     }
 
 }
