--- a/resources/src/assets/scss/components/header.scss
+++ b/resources/src/assets/scss/components/header.scss
@@ -18,7 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1290px;
+  // max-width: 1290px;
   flex: 1;
   margin: 0 auto;
   // outline: 1px solid red;
