--- a/resources/src/assets/scss/sections/hero.scss
+++ b/resources/src/assets/scss/sections/hero.scss
@@ -34,8 +34,10 @@
     right: 50%;
     transform: translate(136%);
     margin-bottom: 124px;
+    padding: 0 30px;
 
-    @media (max-width: 1280px) {
+    @media (max-width: 1450px) {
+      // padding: 0;
       right: 0;
       transform: translate(0);
     }
