--- a/resources/src/assets/scss/sections/about.scss
+++ b/resources/src/assets/scss/sections/about.scss
@@ -1,104 +1,86 @@
 #about {
-  display: flex;
-  justify-content: center;
-  min-height: unset;
+    display: flex;
+    justify-content: center;
+    min-height: unset;
 
-
-  @media (max-width: $px768) {
-    justify-content: flex-start;
-  }
-
-  h2 {
-    margin-bottom: 40px;
-
-    @media (max-width: $px480) {
-      text-align: center;
-    }
-  }
-
-  p {
-    position: relative;
-
-    @media (max-width: $px480) {
-      text-align: center;
+    @media (max-width: $px768) {
+        justify-content: flex-start;
     }
 
-  }
+    h2 {
+        margin-bottom: 40px;
 
-  .ellipse2 {
-    left: 20%;
-    top: 60%;
-  }
+        @media (max-width: $px480) {
+            text-align: center;
+        }
+    }
+
+    p {
+        position: relative;
+
+        @media (max-width: $px480) {
+            text-align: center;
+        }
+
+    }
 }
 
 .about__content {
-  margin-top: 25px;
-  display: flex;
-  justify-content: center;
-  max-width: 1290px;
-  gap: 30px;
+    // margin-top: 25px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    // max-width: 1290px;
+    // gap: 30px;
 
-  @media (max-width: $px1024) {
-    margin-top: 70px;
-    // height: 406px;
-  }
+    @media (max-width: $px1024) {
+        margin-top: 70px;
+    }
 
-  @media (max-width: $px768) {
-    flex-direction: column;
-    margin-top: 55px;
-  }
+    @media (max-width: $px768) {
+        flex-direction: column;
+        margin-top: 55px;
+    }
 }
 
 .about__text {
-  max-width: 630px;
-  margin: auto 0;
-  flex: 1;
+    max-width: 600px;
+    margin: auto 0;
+    flex: 1;
 
-  @media (max-width: $px768) {
-    max-width: unset;
-  }
+    @media (max-width: $px768) {
+        max-width: unset;
+    }
 }
 
 .about__image {
-  flex: 1;
-  max-width: 630px;
-  display: flex;
-  align-items: center;
+    flex: 1;
+    max-width: 650px;
+    display: flex;
+    align-items: center;
 
+    @media (max-width: $px768) {
+        max-width: unset;
+        margin-top: unset;
+        min-height: 500px;
+    }
 
+    @media (max-width: $px768) {}
 
-  @media (max-width: $px768) {
-    max-width: unset;
-    margin-top: unset;
-    min-height: 500px;
-  }
+    @media (max-width: $px480) {
+        min-height: 400px;
+    }
 
-  @media (max-width: $px768) {}
+    @media (max-width: $px360) {
+        min-height: 300px;
+    }
 
-  @media (max-width: $px480) {
-    min-height: 400px;
-  }
-
-  @media (max-width: $px360) {
-    min-height: 300px;
-  }
-
-
-  img {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
-    object-position: 0 0;
-    object-fit: cover;
-
-
-  }
-}
-
-.about-dot1 {
-  top: 9.6vh;
-  left: calc(50% + -720px);
-  transform: translate(-50%);
-  opacity: 0.8;
+    img {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        border-radius: 8px;
+        object-position: 0 0;
+        object-fit: cover;
+    }
 }
