--- a/resources/src/assets/scss/sections/hero.scss
+++ b/resources/src/assets/scss/sections/hero.scss
@@ -1,77 +1,77 @@
 #hero {
-  background-image: url('../../../../../public/assets/img/hero-bg.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 25%;
+    background-image: url('../../../../../public/assets/img/hero-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 25%;
 }
 
 .hero {
-  min-height: 700px;
-  position: relative;
-  // outline: 1px solid green;
-  display: flex;
-  align-items: flex-end;
-
-  @media (max-width: $px1024) {
-    min-height: 500px;
-  }
-
-  @media (max-width: $px768) {
-    min-height: 400px;
-  }
-
-  @media (max-width: $px480) {
-    // min-height: 500px;    
-  }
-
-  @media (max-width: $px360) {
-    min-height: 300px;
-  }
-
-  &__content {
-    // outline: 1px solid red;
-    position: absolute;
-    right: 50%;
-    transform: translate(136%);
-    margin-bottom: 124px;
-    padding: 0 30px;
-
-    @media (max-width: 1450px) {
-      // padding: 0;
-      right: 0;
-      transform: translate(0);
-    }
+    min-height: 700px;
+    position: relative;
+    // outline: 1px solid green;
+    display: flex;
+    align-items: flex-end;
 
     @media (max-width: $px1024) {
-      margin-bottom: 50px;
+        min-height: 500px;
     }
 
     @media (max-width: $px768) {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      text-align: center;
-      margin-bottom: 63px;
+        min-height: 400px;
     }
 
-    @media only screen and (max-width: $px480) {
-      margin-bottom: 50px;
+    @media (max-width: $px480) {
+        // min-height: 500px;    
     }
 
-    @media only screen and (max-width: $px360) {
-      margin-bottom: 30px;
+    @media (max-width: $px360) {
+        min-height: 300px;
     }
 
-    h1 {
-      white-space: nowrap;
+    &__content {
+        // outline: 1px solid red;
+        position: absolute;
+        right: 50%;
+        // transform: translate(136%);
+        margin-bottom: 124px;
+        // padding: 0 30px;
+        right: 0;
 
-      span {
-        margin-left: -2em;
+        @media (max-width: 1450px) {
+            // padding: 0;
+            transform: translate(0);
+        }
+
+        @media (max-width: $px1024) {
+            margin-bottom: 50px;
+        }
 
         @media (max-width: $px768) {
-          margin-left: 0;
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            text-align: center;
+            margin-bottom: 63px;
         }
-      }
+
+        @media only screen and (max-width: $px480) {
+            margin-bottom: 50px;
+        }
+
+        @media only screen and (max-width: $px360) {
+            margin-bottom: 30px;
+        }
+
+        h1 {
+            white-space: nowrap;
+
+            span {
+                margin-left: -2em;
+
+                @media (max-width: $px768) {
+                    margin-left: 0;
+                }
+            }
+        }
     }
-  }
 }
