--- a/resources/src/assets/scss/utils/base.scss
+++ b/resources/src/assets/scss/utils/base.scss
@@ -1,5 +1,5 @@
 @import './breakpoints.scss';
-// @import './vars.scss';
+@import './vars.scss';
 
 // * {
 //     margin: 0;
@@ -41,7 +41,7 @@ body {
     -moz-overflow-x: hidden;
     -ms-overflow-x: hidden;
     -o-overflow-x: hidden;
-    font-family: 'Merriweather Sans';
+    font-family: $merriweatherSans;
     background: $bg-white;
     color: $font-black;
     padding-bottom: 20px;
@@ -50,11 +50,10 @@ body {
 section {
     // outline: 1px solid red;
     position: relative;
-    // padding: 0 30px;
-
+    padding: 0 30px;
 
     @media (max-width: $px768) {
-        // padding: 0 20px;
+        padding: 0 20px;
     }
 
 }
@@ -70,20 +69,26 @@ main {
 }
 
 .containers {
+    outline: 1px solid red;
     position: relative;
     // min-width: 300px;
     margin: 0 auto;
     max-width: 1290px;
+    // padding: 0 30px;
 
-    @media (max-width: 1460px) {
-        padding-right: 30px;
-        padding-left: 30px;
+    // @media (max-width: $px768) {
+    //     padding: 0 20px;
+    // }
 
-        @media (max-width: 1024px) {
-            padding-right: 20px;
-            padding-left: 20px;
-        }
-    }
+    // @media (max-width: 1460px) {
+    //     padding-right: 30px;
+    //     padding-left: 30px;
+
+    //     @media (max-width: 1024px) {
+    //         padding-right: 20px;
+    //         padding-left: 20px;
+    //     }
+    // }
 
 }
 
@@ -158,7 +163,7 @@ img {
 a {
     text-decoration: none;
     color: $font-black;
-    font-family: "Merriweather Sans";
+    font-family: $merriweatherSans;
 
     &:hover {
         color: $font-brown;
@@ -173,7 +178,7 @@ button {
 
 h1,
 h2 {
-    font-family: "Slovic";
+    font-family: $slovic;
     color: $font-brown;
 }
 
@@ -234,6 +239,6 @@ h4 {
 p {
     font-style: normal;
     font-weight: 400;
-    font-size: 17px;
-    line-height: 140%;
+    font-size: 18px;
+    line-height: 160%;
 }
