--- a/resources/src/assets/scss/utils/vars.scss
+++ b/resources/src/assets/scss/utils/vars.scss
@@ -3,3 +3,5 @@ $font-brown: #490D0C;
 $font-black: #0F0000;
 $font-red: #C81F04;
 $font-dark-grey: #2D2D2D;
+$merriweatherSans: 'MerriweatherSans';
+$slovic: 'Slovic';
