--- a/resources/src/assets/scss/components/burger.scss
+++ b/resources/src/assets/scss/components/burger.scss
@@ -3,7 +3,7 @@
 .burger {
     display: none;
     cursor: pointer;
-    background-color: $bg-white;
+    background-color: rgba(0,0,0,0);
     position: fixed;
     top: 15px;
     right: 20px;
