--- a/resources/src/assets/scss/sections/about.scss
+++ b/resources/src/assets/scss/sections/about.scss
@@ -1,4 +1,4 @@
-#about {
+.about {
     display: flex;
     justify-content: center;
     min-height: unset;
@@ -7,80 +7,100 @@
         justify-content: flex-start;
     }
 
-    h2 {
-        margin-bottom: 40px;
-
-        @media (max-width: $px480) {
-            text-align: center;
-        }
-    }
-
-    p {
-        position: relative;
-
-        @media (max-width: $px480) {
-            text-align: center;
-        }
-
-    }
-}
-
-.about__content {
-    // margin-top: 25px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    // max-width: 1290px;
-    // gap: 30px;
-
-    @media (max-width: $px1024) {
-        margin-top: 70px;
-    }
-
-    @media (max-width: $px768) {
-        flex-direction: column;
-        margin-top: 55px;
-    }
-}
-
-.about__text {
-    max-width: 600px;
-    margin: auto 0;
-    flex: 1;
-
-    @media (max-width: $px768) {
-        max-width: unset;
-    }
-}
-
-.about__image {
-    flex: 1;
-    max-width: 650px;
-    display: flex;
-    align-items: center;
-
-    @media (max-width: $px768) {
-        max-width: unset;
-        margin-top: unset;
-        min-height: 500px;
-    }
-
-    @media (max-width: $px768) {}
-
-    @media (max-width: $px480) {
-        min-height: 400px;
-    }
-
-    @media (max-width: $px360) {
-        min-height: 300px;
-    }
-
-    img {
-        position: relative;
+    &__content {
         width: 100%;
-        height: 100%;
-        border-radius: 8px;
-        object-position: 0 0;
-        object-fit: cover;
+        display: flex;
+        justify-content: space-between;
+        // gap: 40px;
+
+        @media (max-width: $px1024) {
+            align-items: center;
+            flex-direction: column;
+        }
+
+        @media (max-width: $px768) {
+            // margin-top: 55px;
+        }
+    }
+
+    &__text {
+        max-width: 600px;
+        margin: auto 0;
+        flex: 1;
+
+        @media (max-width: $px1024) {
+            width: 100%;
+            max-width: unset;
+        }
+
+        @media (max-width: $px768) {}
+
+        h2 {
+            margin-bottom: 40px;
+
+            @media (max-width: $px480) {
+                text-align: center;
+            }
+        }
+
+        p {
+            position: relative;
+
+            @media (max-width: $px480) {
+                text-align: center;
+            }
+        }
+    }
+
+    &__image {
+        flex: 1;
+        max-width: 650px;
+        display: flex;
+        align-items: center;
+
+        @media (max-width: $px1024) {
+            max-width: unset;
+            width: 100%;
+
+        }
+
+        @media (max-width: $px768) {
+            max-width: unset;
+            margin-top: unset;
+            min-height: 500px;
+        }
+
+        @media (max-width: $px480) {
+            min-height: 400px;
+        }
+
+        @media (max-width: $px360) {
+            min-height: 300px;
+        }
+
+        img {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            object-position: 0 0;
+            object-fit: cover;
+        }
+    }
+
+    &__image-col-1 {
+        margin-right: 10px;
+
+        @media (max-width: $px1024) {
+            width: 100%;
+            flex: 1;
+        }
+    }
+
+    &__image-col-2 {
+        @media (max-width: $px1024) {
+            width: 100%;
+            flex: 1;
+        }
     }
 }
