--- a/resources/src/assets/scss/sections/hero.scss
+++ b/resources/src/assets/scss/sections/hero.scss
@@ -1,5 +1,5 @@
 #hero {
-    background-image: url('../../../../../public/assets/img/hero-bg.png');
+    background-image: url('../../../../../public/assets/img/hero-bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 25%;
