--- a/resources/src/assets/scss/sections/about.scss
+++ b/resources/src/assets/scss/sections/about.scss
@@ -57,11 +57,12 @@
         max-width: 650px;
         display: flex;
         align-items: center;
+        background-color: green;
 
         @media (max-width: $px1024) {
             max-width: unset;
             width: 100%;
-
+            // max-height: 760px;
         }
 
         @media (max-width: $px768) {
@@ -77,19 +78,14 @@
         @media (max-width: $px360) {
             min-height: 300px;
         }
-
-        img {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
-            object-position: 0 0;
-            object-fit: cover;
-        }
     }
 
     &__image-col-1 {
         margin-right: 10px;
+        // display: flex;
+        // flex-direction: column;
+        // align-items: center;
+        // justify-content: center;
 
         @media (max-width: $px1024) {
             width: 100%;
@@ -101,6 +97,18 @@
         @media (max-width: $px1024) {
             width: 100%;
             flex: 1;
+        }
+    }
+
+    &__img1 {
+        @media only screen and (max-width: $px1024) {
+            height: 450px;
+        }
+    }
+
+    &__img2 {
+        @media only screen and (max-width: $px1024) {
+            height: 300px;
         }
     }
 }
