--- a/resources/src/assets/scss/utils/base.scss
+++ b/resources/src/assets/scss/utils/base.scss
@@ -242,3 +242,18 @@ p {
     font-size: 18px;
     line-height: 160%;
 }
+
+img {
+    // position: relative;
+    width: 100%;
+    height: 100%;
+    // border-radius: 10px;
+    object-position: 0 0;
+    object-fit: cover;
+}
+
+.svg {
+    width: unset;
+    height: unset;
+    max-width: unset;
+}
