--- a/resources/src/assets/scss/sections/about.scss
+++ b/resources/src/assets/scss/sections/about.scss
@@ -100,15 +100,20 @@
         }
     }
 
-    &__img1 {
+    &__img1,
+    &__img4 {
         @media only screen and (max-width: $px1024) {
             height: 450px;
         }
     }
 
-    &__img2 {
+    &__img2,
+    &__img3 {
         @media only screen and (max-width: $px1024) {
             height: 300px;
         }
+    }
+    img {
+        border-radius: 10px;
     }
 }
