--- a/public/fonts/MerriweatherSans/stylesheet.css
+++ b/public/fonts/MerriweatherSans/stylesheet.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'Merriweather Sans';
     src: url('MerriweatherSans-Italic.eot');
     src: local('Merriweather Sans Italic'), local('MerriweatherSans-Italic'),
@@ -8,7 +8,7 @@
         url('MerriweatherSans-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-}
+} */
 
 @font-face {
     font-family: 'Merriweather Sans';
@@ -46,7 +46,7 @@
     font-style: normal;
 }
 
-@font-face {
+/* @font-face {
     font-family: 'Merriweather Sans';
     src: url('MerriweatherSans-Light.eot');
     src: local('Merriweather Sans Light'), local('MerriweatherSans-Light'),
@@ -56,8 +56,8 @@
         url('MerriweatherSans-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
-}
-
+} */
+/* 
 @font-face {
     font-family: 'Merriweather Sans';
     src: url('MerriweatherSans-BoldItalic.eot');
@@ -68,9 +68,9 @@
         url('MerriweatherSans-BoldItalic.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-}
+} */
 
-@font-face {
+/* @font-face {
     font-family: 'Merriweather Sans';
     src: url('MerriweatherSans-LightItalic.eot');
     src: local('Merriweather Sans Light Italic'), local('MerriweatherSans-LightItalic'),
@@ -80,9 +80,9 @@
         url('MerriweatherSans-LightItalic.ttf') format('truetype');
     font-weight: 300;
     font-style: italic;
-}
+} */
 
-@font-face {
+/* @font-face {
     font-family: 'Merriweather Sans';
     src: url('MerriweatherSans-ExtraBoldItalic.eot');
     src: local('Merriweather Sans ExtraBold Italic'), local('MerriweatherSans-ExtraBoldItalic'),
@@ -92,5 +92,5 @@
         url('MerriweatherSans-ExtraBoldItalic.ttf') format('truetype');
     font-weight: 800;
     font-style: italic;
-}
+} */
 
