--- a/resources/src/assets/scss/_index.scss
+++ b/resources/src/assets/scss/_index.scss
@@ -1,5 +1,5 @@
 @import 'utils/_index.scss';
-// @import "layouts/_index";
+@import "layouts/_index";
 @import "UI/_index";
 // @import "layouts/section.scss";
 @import "sections/_index.scss";
