--- a/resources/src/assets/scss/layouts/header.scss
+++ b/resources/src/assets/scss/layouts/header.scss
@@ -1,14 +1,19 @@
 .header {
-  background-color: #00110A;
-  color: #fff;
+  background-color: $bg-white;
   position: fixed;
-  top: 0;  
+  top: 0;
   width: 100%;
   z-index: 3;
   display: flex;
+  padding: 0 30px;
 
-  @media (max-width: $px850) {
+
+  @media (max-width: $px1024) {
     position: absolute;
+  }
+
+  @media (max-width: $px768) {
+    padding: 0 20px;
   }
 }
 
@@ -18,7 +23,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1290px;
   flex: 1;
   margin: 0 auto;
 
@@ -36,11 +40,7 @@
     margin-right: auto;
   }
 
-  img {
-    width: 160px;
-    height: 40px;
-    max-width: unset;
-  }
+
 }
 
 .header__logo-fixed {
@@ -52,17 +52,17 @@
 .header__phone {
   font-style: normal;
   font-weight: 800;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 20px;
+  line-height: 27px;
   transition: all 0.4s;
   white-space: nowrap;
   transition: all 0.4s;
 
-  @media (max-width: $px850) {
+  @media (max-width: $px1024) {
     margin-right: 90px;
-  } 
+  }
 
-  @media (max-width: 470px) {
+  @media (max-width: 580px) {
     position: fixed;
     top: -40%;
     left: 50%;
