--- a/resources/src/assets/scss/sections/about.scss
+++ b/resources/src/assets/scss/sections/about.scss
@@ -11,15 +11,12 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
-        // gap: 40px;
+        padding-top: 80px;
 
         @media (max-width: $px1024) {
             align-items: center;
             flex-direction: column;
-        }
-
-        @media (max-width: $px768) {
-            // margin-top: 55px;
+            padding-top: 70px;
         }
     }
 
@@ -27,10 +24,13 @@
         max-width: 600px;
         margin: auto 0;
         flex: 1;
+        margin-right: 40px;
 
         @media (max-width: $px1024) {
             width: 100%;
             max-width: unset;
+            margin: auto 0;
+            margin-bottom: 40px;
         }
 
         @media (max-width: $px768) {}
@@ -39,7 +39,7 @@
             margin-bottom: 40px;
 
             @media (max-width: $px480) {
-                text-align: center;
+                // text-align: center;
             }
         }
 
@@ -47,7 +47,7 @@
             position: relative;
 
             @media (max-width: $px480) {
-                text-align: center;
+                // text-align: center;
             }
         }
     }
@@ -62,30 +62,16 @@
         @media (max-width: $px1024) {
             max-width: unset;
             width: 100%;
-            // max-height: 760px;
         }
 
         @media (max-width: $px768) {
             max-width: unset;
             margin-top: unset;
-            // min-height: 500px;
-        }
-
-        @media (max-width: $px480) {
-            // min-height: 400px;
-        }
-
-        @media (max-width: $px360) {
-            // min-height: 300px;
         }
     }
 
     &__image-col-1 {
         margin-right: 10px;
-        // display: flex;
-        // flex-direction: column;
-        // align-items: center;
-        // justify-content: center;
 
         @media (max-width: $px1024) {
             width: 100%;
