--- a/resources/src/assets/scss/sections/_index.scss
+++ b/resources/src/assets/scss/sections/_index.scss
@@ -1,6 +1,6 @@
 @import "hero";
 @import 'about';
-// @import "advantages";
+@import "info";
 // @import "services";
 // @import "stages";
 // @import 'certificate';
