--- a/resources/src/assets/scss/sections/info.scss
+++ b/resources/src/assets/scss/sections/info.scss
@@ -33,22 +33,24 @@
       flex-direction: column;
       width: 100%;
     }
-  }
 
-  &__card--important {
-    @media only screen and (max-width: $px1024) {}
+    &-img {
+      background-color: white;
+    }
   }
 
   &__cards {
     display: flex;
     flex: 1;
     gap: 30px;
+
     @media only screen and (max-width: $px480) {
       flex-direction: column;
     }
   }
 
   &__card {
+    background-color: white;
     flex: 1;
     min-height: 324px;
     display: flex;
