--- a/resources/src/assets/scss/utils/base.scss
+++ b/resources/src/assets/scss/utils/base.scss
@@ -117,14 +117,34 @@ main {
 }
 
 .mask2 {
-    background: 
-    linear-gradient(0deg, rgba(255, 255, 255, 0.2), 
-    rgba(255, 255, 255, 0.2)), 
-    url(../../../../../public/assets/img/mask2.png);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h2 {
+        margin-top: 70px;
+        margin-bottom: 40px;
+    }
+}
+
+.mask2::before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background:
+        linear-gradient(0deg, rgba(255, 255, 255, 0.2),
+            rgba(255, 255, 255, 0.2)),
+        url(../../../../../public/assets/img/mask2.png);
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 50% 101%;
+    // background-position: 50% 101%;
+    // opacity: 0.9;
 }
 
 .mask3 {
@@ -173,18 +193,9 @@ button {
     position: relative;
 }
 
-h1,
-h2 {
+h1 {
     font-family: $slovic;
     color: $font-brown;
-}
-
-h3,
-h4 {
-    color: $font-brown;
-}
-
-h1 {
     font-style: normal;
     font-weight: 500;
     font-size: 75px;
@@ -216,11 +227,13 @@ h1 {
 }
 
 h2 {
+    font-family: $slovic;
+    color: $font-brown;
     font-style: normal;
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 58px;
-    letter-spacing: 0.7px;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: 130%;
+    // letter-spacing: 0.7px;
     z-index: 1;
     position: relative;
 
@@ -231,17 +244,33 @@ h2 {
     }
 }
 
-h4 {
+h3 {
+    font-family: 'Open Sans';
     font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 140%;
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 49px;
+    color: $font-black;
+}
+
+h4 {
+    color: $font-brown;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 28px;
+    line-height: 160%;
     letter-spacing: 0.9px;
 }
 
 p {
     font-style: normal;
     font-weight: 400;
+    font-size: 18px;
+    line-height: 160%;
+}
+
+p.bold {
+    font-weight: 700;
     font-size: 18px;
     line-height: 160%;
 }
