--- a/resources/src/assets/scss/sections/_index.scss
+++ b/resources/src/assets/scss/sections/_index.scss
@@ -1,6 +1,7 @@
 @import "hero";
 @import 'about';
 @import "info";
+@import "bath";
 // @import "services";
 // @import "stages";
 // @import 'certificate';
