--- a/resources/src/assets/scss/sections/bath.scss
+++ b/resources/src/assets/scss/sections/bath.scss
@@ -7,20 +7,20 @@
 
 .bath__content {
   display: flex;
-  justify-content: center;
-  gap: 101px;
+  // justify-content: center;
+  // gap: 101px;
   position: relative;
-  padding-top: 80px;
+  // padding-top: 80px;
 
   @media (max-width: $px1024) {
-    gap: 20px;
+    // gap: 20px;
   }
 
   @media (max-width: $px768) {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    gap: 50px;
+    // gap: 50px;
   }
 }
 
@@ -58,49 +58,38 @@
 
 .bath__image {
   flex: 1;
-  max-width: 550px;
-  display: flex;
-  align-items: center;
+  // max-width: 550px;
+  // display: flex;
+  // align-items: center;
 
-  @media (max-width: $px1024) {
-    min-height: 500px;
-  }
+  // @media (max-width: $px1024) {
+  //   min-height: 500px;
+  // }
 
-  @media (max-width: $px768) {
-    width: 100%;
-    max-width: unset;
-  }
+  // @media (max-width: $px768) {
+  //   width: 100%;
+  //   max-width: unset;
+  // }
 
-  @media (max-width: $px360) {
-    min-height: 400px;
-  }
+  // @media (max-width: $px360) {
+  //   min-height: 400px;
+  // }
 
-  img {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
-    object-fit: cover;
+  // img {
+  //   position: relative;
+  //   width: 100%;
+  //   height: 100%;
+  //   border-radius: 0px 10px 10px 0px;
+  //   object-fit: cover;
 
-  }
+  // }
 }
 
-.bath-dot1 {
-  left: calc(50% - -522px);
-  transform: translate(-50%);
-  top: 0vh;
-  opacity: 0.7;
-}
-
-.bath-dot2 {
-  left: calc(50% - 756px);
-  transform: translate(-50%);
-  top: 33vh;
-  opacity: 0.2;
-}
-
-.bath-dot3 {
-  left: calc(50% - 476px);
-  transform: translate(-50%);
-  top: 0vh;
+.bath__card {
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
