--- a/resources/src/assets/scss/sections/bath.scss
+++ b/resources/src/assets/scss/sections/bath.scss
@@ -1,64 +1,98 @@
-#bath {
-  @media (max-width: $px1024) {
-    gap: 20px;
-  }
+@import '../utils/vars.scss';
 
-}
+.bath {
+  
+  // height: 100%;
 
-.bath__content {
-  display: flex;
-  // justify-content: center;
-  // gap: 101px;
-  position: relative;
-  // padding-top: 80px;
-
-  @media (max-width: $px1024) {
-    // gap: 20px;
-  }
-
-  @media (max-width: $px768) {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    // gap: 50px;
-  }
-}
-
-.bath__text {
-  // margin-top: 150px;
-  margin: auto 0;
-  flex: 1;
-  max-width: 639px;
-
-  @media (max-width: $px1024) {}
-
-  @media (max-width: $px768) {
-    max-width: unset;
-  }
+  &__content {
+    display: flex;
+    position: relative;
+    background: rgba(243, 238, 235, 0.8);
+    width: 100%;
 
 
-  h1 {
-    margin-bottom: 40px;
-
-    @media (max-width: $px1024) {
-      margin-bottom: 32px;
+    @media (max-width: $bath-column) {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      min-height: unset;
+      // justify-content: space-between;
+      // gap: 50px;
     }
   }
 
-  p {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 140%;
-    margin-bottom: 40px;
+  &__text {
+    // margin: auto 0;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 40px 30px;
+    position: relative;
+    // height: 100%;
+
+    h3 {
+      margin-bottom: 20px;
+    }
+
+    h4 {
+      margin-bottom: 20px;
+    }
+
+    p {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__schedule {
+    display: flex;
+    width: 100%;
+    gap: 64px;
+    white-space: nowrap;
+
+    @media (max-width: $bath-column) {
+      justify-content: space-evenly;
+      gap: 30px;
+    }
+  }
+
+  &__btn {
+    align-self: self-start;
+    // position: absolute;
+    // left: 30px;
+    // bottom: 40px;
+
+    @media (max-width: $bath-column) {
+      align-self: center;
+    }
   }
 }
 
-
 .bath__image {
   flex: 1;
-  // max-width: 550px;
+  display: flex;
+  max-width: 580px;
+  width: 100%;
+  height: 100%;
+  min-height: 610px;
+  outline: 1px solid red;
+
+  @media (max-width: $bath-column) {
+    max-width: unset;
+    // width: 100%;
+  }
+
+  img {
+    // object-position: -209px 0px;
+    // @media (max-width: $px1024) {
+    //   width: 100%;
+    //   max-height: 500px;
+    //   height: auto;
+    //   object-fit: cover;
+    //   object-position: 0 -220px;
+    // }
+  }
+
+  // min-height: 610px;
   // display: flex;
   // align-items: center;
 
