--- a/resources/src/assets/scss/utils/base.scss
+++ b/resources/src/assets/scss/utils/base.scss
@@ -9,25 +9,25 @@
 // }
 
 /* Скролл бар */
-* {
-    scrollbar-width: thin;
-    scrollbar-color: rgb(71, 71, 71) rgba(108, 108, 108, 0.5);
-}
+// * {
+//     scrollbar-width: thin;
+//     scrollbar-color: rgb(71, 71, 71) rgba(108, 108, 108, 0.5);
+// }
 
-*::-webkit-scrollbar {
-    height: 14px;
-    width: 10px;
-}
+// *::-webkit-scrollbar {
+//     height: 14px;
+//     width: 10px;
+// }
 
-*::-webkit-scrollbar-track {
-    background: rgba(108, 108, 108, 0.5);
-}
+// *::-webkit-scrollbar-track {
+//     background: rgba(108, 108, 108, 0.5);
+// }
 
-*::-webkit-scrollbar-thumb {
-    background-color: rgb(136 136 136);
-    border-radius: 3px;
-    border: 10px solid rgb(136 136 136);
-}
+// *::-webkit-scrollbar-thumb {
+//     background-color: rgb(136 136 136);
+//     border-radius: 3px;
+//     border: 10px solid rgb(136 136 136);
+// }
 
 html {
     scroll-behavior: smooth;
@@ -36,11 +36,11 @@ html {
 
 body {
     position: relative;
-    overflow-x: hidden;
-    -webkit-overflow-x: hidden;
-    -moz-overflow-x: hidden;
-    -ms-overflow-x: hidden;
-    -o-overflow-x: hidden;
+    // overflow-x: hidden;
+    // -webkit-overflow-x: hidden;
+    // -moz-overflow-x: hidden;
+    // -ms-overflow-x: hidden;
+    // -o-overflow-x: hidden;
     font-family: 'Open Sans';
     background: $bg-white;
     color: $font-black;
@@ -288,4 +288,29 @@ img {
     width: unset;
     height: unset;
     max-width: unset;
+}
+
+.btn {
+    border: 1px solid red;
+    border-radius: 10px;
+    padding: 16px 24px 18px;
+    border-radius: 10px;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;
+    background: linear-gradient(92.71deg, #C81F04 0%, #F12C0D 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+
+    &:hover {
+        background: linear-gradient(92.71deg, #C81F04 0%, #F12C0D 100%);
+        color: white;
+        background-clip: unset;
+        text-fill-color: unset;
+        -webkit-background-clip: unset;
+        -webkit-text-fill-color: unset;
+    }
 }
