--- a/resources/src/assets/scss/utils/vars.scss
+++ b/resources/src/assets/scss/utils/vars.scss
@@ -6,3 +6,4 @@ $font-dark-grey: #2D2D2D;
 $merriweatherSans: 'Merriweather Sans';
 $slovic: 'Slovic';
 $bath-column: "1350px";
+$bath-schedule-column: "710px";
