--- a/resources/src/assets/scss/sections/bath.scss
+++ b/resources/src/assets/scss/sections/bath.scss
@@ -1,8 +1,6 @@
 @import '../utils/vars.scss';
 
 .bath {
-  
-  // height: 100%;
 
   &__content {
     display: flex;
@@ -10,25 +8,29 @@
     background: rgba(243, 238, 235, 0.8);
     width: 100%;
 
-
     @media (max-width: $bath-column) {
       flex-direction: column;
       align-items: center;
       text-align: center;
       min-height: unset;
-      // justify-content: space-between;
-      // gap: 50px;
     }
+
+
   }
 
   &__text {
-    // margin: auto 0;
     display: flex;
     flex-direction: column;
     flex: 1;
     padding: 40px 30px;
     position: relative;
-    // height: 100%;
+    @media only screen and (max-width: $bath-schedule-column) {
+        // padding: 40px 0;
+        h3,h4{
+          // margin-left: 30px;
+          // margin-right: 30px;
+        }
+      }
 
     h3 {
       margin-bottom: 20px;
@@ -52,6 +54,11 @@
     @media (max-width: $bath-column) {
       justify-content: space-evenly;
       gap: 30px;
+    }
+
+    @media only screen and (max-width: $bath-schedule-column) {
+      flex-direction: column;
+      
     }
   }
 
@@ -78,52 +85,13 @@
 
   @media (max-width: $bath-column) {
     max-width: unset;
-    // width: 100%;
+    min-height: unset;
+    max-height: 500px;
   }
 
-  img {
-    // object-position: -209px 0px;
-    // @media (max-width: $px1024) {
-    //   width: 100%;
-    //   max-height: 500px;
-    //   height: auto;
-    //   object-fit: cover;
-    //   object-position: 0 -220px;
-    // }
+  @media only screen and (max-width: $bath-schedule-column) {
+    // flex-direction: column;
+    height: 500px;
+    min-height: 500px;
   }
-
-  // min-height: 610px;
-  // display: flex;
-  // align-items: center;
-
-  // @media (max-width: $px1024) {
-  //   min-height: 500px;
-  // }
-
-  // @media (max-width: $px768) {
-  //   width: 100%;
-  //   max-width: unset;
-  // }
-
-  // @media (max-width: $px360) {
-  //   min-height: 400px;
-  // }
-
-  // img {
-  //   position: relative;
-  //   width: 100%;
-  //   height: 100%;
-  //   border-radius: 0px 10px 10px 0px;
-  //   object-fit: cover;
-
-  // }
-}
-
-.bath__card {
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
 }
