--- a/resources/src/assets/scss/utils/base.scss
+++ b/resources/src/assets/scss/utils/base.scss
@@ -259,7 +259,7 @@ h4 {
     font-weight: 800;
     font-size: 28px;
     line-height: 160%;
-    letter-spacing: 0.9px;
+    letter-spacing: 0px;
 }
 
 p {
@@ -313,4 +313,10 @@ img {
         -webkit-background-clip: unset;
         -webkit-text-fill-color: unset;
     }
+}
+
+.baths {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
