--- a/resources/src/assets/scss/sections/_index.scss
+++ b/resources/src/assets/scss/sections/_index.scss
@@ -2,6 +2,7 @@
 @import 'about';
 @import "info";
 @import "bath";
+@import "rooms";
 // @import "services";
 // @import "stages";
 // @import 'certificate';
