laundry text done

--- a/resources/src/assets/scss/sections/_index.scss
+++ b/resources/src/assets/scss/sections/_index.scss
@@ -3,6 +3,7 @@
 @import "info";
 @import "bath";
 @import "rooms";
+@import "laundry";
 // @import "services";
 // @import "stages";
 // @import 'certificate';
