--- a/resources/src/assets/scss/utils/vars.scss
+++ b/resources/src/assets/scss/utils/vars.scss
@@ -7,3 +7,4 @@ $merriweatherSans: 'Merriweather Sans';
 $slovic: 'Slovic';
 $bath-column: "1350px";
 $bath-schedule-column: "710px";
+$laundry-column: "1370px";
