laundry text fix

--- a/resources/src/assets/scss/utils/base.scss
+++ b/resources/src/assets/scss/utils/base.scss
@@ -132,7 +132,8 @@ body.modal-open {
 }
 
 // графические элементы нельзя выделить мышкой
-img, mask {
+img,
+mask {
     user-select: none;
     -moz-user-select: none;
     -khtml-user-select: none;
