--- a/resources/src/assets/scss/sections/laundry.scss
+++ b/resources/src/assets/scss/sections/laundry.scss
@@ -2,9 +2,7 @@
 
 .laundry {
     display: flex;
-    // justify-content: center;
     align-items: center;
-    // min-height: unset;
     flex-direction: column;
     gap: 40px;
     padding-bottom: 78.5px;
@@ -12,6 +10,12 @@
     @media (max-width: 815px) {
         // justify-content: flex-start;
         text-align: center;
+    }
+
+    h2 {
+        @media only screen and (max-width: 395px) {
+            font-size: 30px;
+        }
     }
 
     &__content {
@@ -49,6 +53,7 @@
         h1 {
             margin-bottom: 20px;
         }
+
 
         h4:first-of-type {
             margin-bottom: 20px;
@@ -104,7 +109,7 @@
                 align-items: center;
             }
 
-            @media only screen and (max-width: $px360) {
+            @media only screen and (max-width: 410px) {
                 align-items: flex-start;
             }
         }
@@ -114,7 +119,7 @@
             align-items: center;
             white-space: nowrap;
 
-            @media only screen and (max-width: $px360) {
+            @media only screen and (max-width: 410px) {
                 white-space: normal;
                 text-align: start;
             }
@@ -137,7 +142,7 @@
         gap: 8.5px;
         // background-color: green;
 
-        @media (max-width: $px1024) {
+        @media (max-width: $laundry-column) {
             max-width: unset;
             width: 100%;
         }
@@ -147,32 +152,62 @@
             margin-top: unset;
         }
 
-        &-row-1 {
+        &-row {
             display: flex;
-            // margin-right: 10px;
             gap: 10px;
-            // width: 350px;
             width: 100%;
             flex: 1;
 
-            @media (max-width: $px1024) {}
-        }
+            &-top {
+                .left {
+                    // flex: 1;
+                    width: 30%;
 
-        &-row-2 {
-            display: flex;
-            gap: 10px;
+                    @media only screen and (max-width: 450px) {
+                        display: none;
+                    }
+                }
 
-            width: 100%;
-            flex: 1;
+                .right {
+                    // flex: 1;
+                    width: 70%;
 
-            @media (max-width: $px1024) {}
+                    @media only screen and (max-width: 450px) {
+                        width: 100%;
+                    }
+                }
+            }
+
+            &-bottom {
+                .left {
+                    width: 70%;
+
+                    @media only screen and (max-width: 450px) {
+                        width: 100%;
+                    }
+                }
+
+                .right {
+                    width: 30%;
+
+                    @media only screen and (max-width: 450px) {
+                        display: none;
+                    }
+                }
+            }
+
+
         }
 
         img {
             border-radius: 10px;
-            // width: 50%;
             height: 360px;
             object-fit: cover;
+
+            @media (max-width: $laundry-column) {
+                max-width: unset;
+                height: 300px;
+            }
         }
     }
 
