bath swiper refactor

--- a/resources/src/assets/scss/sections/_index.scss
+++ b/resources/src/assets/scss/sections/_index.scss
@@ -4,6 +4,7 @@
 @import "bath";
 @import "rooms";
 @import "laundry";
+@import "documents";
 // @import "services";
 // @import "stages";
 // @import 'certificate';
