--- a/resources/src/assets/scss/UI/_index.scss
+++ b/resources/src/assets/scss/UI/_index.scss
@@ -1,6 +1,6 @@
 @import "nav";
 @import "button";
-@import "swiper";
+@import "swiperBath";
 //@import "button";
 //@import "list";
 //@import "micromodal";
