--- a/resources/src/assets/scss/sections/_index.scss
+++ b/resources/src/assets/scss/sections/_index.scss
@@ -5,8 +5,8 @@
 @import "rooms";
 @import "laundry";
 @import "documents";
+@import 'contacts';
 // @import "services";
 // @import "stages";
 // @import 'certificate';
-// @import 'contacts';
 // @import 'politics';
