--- a/resources/src/assets/scss/utils/base.scss
+++ b/resources/src/assets/scss/utils/base.scss
@@ -42,7 +42,7 @@ main {
 }
 
 .containers {
-    outline: 1px solid red;
+    // outline: 1px solid red;
     position: relative;
     margin: 0 auto;
     max-width: 1290px;
