--- a/resources/src/assets/scss/components/_index.scss
+++ b/resources/src/assets/scss/components/_index.scss
@@ -2,4 +2,7 @@
 // @import 'main.scss';
 @import 'burger.scss';
 @import 'modalForm.scss';
+@import 'baths_popup.scss';
+@import 'rooms_popup.scss';
+@import 'laundry_popup.scss';
 // @import 'section.scss';
