--- a/resources/src/assets/scss/UI/nav.scss
+++ b/resources/src/assets/scss/UI/nav.scss
@@ -32,6 +32,7 @@
 
     &.mobile-nav-active {
       min-height: 100vh;
+      padding: 0;
 
       .nav__item-header {
         margin-bottom: 50px;
