--- a/resources/src/assets/scss/sections/info.scss
+++ b/resources/src/assets/scss/sections/info.scss
@@ -1,83 +1,112 @@
 .info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  padding-top: 70px;
-  padding-bottom: 80px;
-
-  h2 {
-    text-align: center;
-    margin-bottom: 40px;
-  }
-
-  &__cards-container {
     display: flex;
-    gap: 30px;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
+    padding-top: 70px;
+    padding-bottom: 80px;
 
-    @media only screen and (max-width: $px1024) {
-      flex-direction: column;
+    h2 {
+        text-align: center;
+        margin-bottom: 40px;
     }
 
-    @media only screen and (max-width: $px480) {
-      width: 100%;
-    }
-  }
+    &__cards {
+        display: flex;
+        flex: 1;
+        gap: 30px;
+        // flex-wrap: wrap;
 
-  &__important-card {
-    display: flex;
-    flex: 1;
+        @media only screen and (max-width: $infowrap) {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
 
-    @media only screen and (max-width: $px480) {
-      flex-direction: column;
-      width: 100%;
-    }
-
-    &-img {
-      background-color: white;
-
-    }
-  }
-
-  &__cards {
-    display: flex;
-    flex: 1;
-    gap: 30px;
-
-    @media only screen and (max-width: $px480) {
-      flex-direction: column;
-    }
-  }
-
-  &__card {
-    background-color: white;
-    flex: 1;
-    min-height: 324px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 40px 30px;
-    flex-direction: column;
-
-    @media only screen and (max-width: $px1024) {
-      min-height: unset;
+        @media only screen and (max-width: $px480) {
+            flex-direction: column;
+        }
     }
 
-    a {
-      font-weight: 800;
-      font-size: 20px;
-      line-height: 27px;
-    }
+    &__card {
+        display: flex;
+        justify-content: space-between;
+        background-color: white;
+        flex: 1;
+        min-height: 324px;
+        display: flex;
+        max-width: 300px;
 
-    *:first-child,
-    *:nth-child(2) {
-      margin-bottom: 20px;
-    }
-  }
+        @media only screen and (max-width: $infowrap) {
+            min-height: unset;
+            max-width: unset;
+            // display: flex;
 
-  &__details {
-    text-align: end;
-  }
+            // justify-content: space-between;
+        }
+
+        @media only screen and (max-width: $px1024) {
+            min-height: unset;
+        }
+
+        &-important {
+            max-width: unset;
+
+            @media only screen and (max-width: $infowrap) {
+                flex: 2;
+                width: 100%;
+                min-width: 100%;
+                flex-direction: row;
+            }
+
+            @media only screen and (max-width: $px480) {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+
+        &-img {
+            flex: 1
+        }
+
+        &-text {
+            flex: 1;
+            padding: 40px 30px;
+
+            @media only screen and (max-width: $infowrap) {
+                display: flex;
+                flex-direction: column;
+
+            }
+
+            a {
+                font-weight: 800;
+                font-size: 20px;
+                line-height: 27px;
+                color: $font-brown;
+            }
+
+            p {
+                color: $font-brown;
+            }
+
+            *:first-child,
+            *:nth-child(2) {
+                margin-bottom: 20px;
+            }
+
+            &-details {
+                display: block;
+                text-align: end;
+            }
+        }
+    }
+}
+
+p.important-header {
+    // width: 100%;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 28px;
+    line-height: 160%;
 }
