--- a/resources/src/assets/scss/components/baths_popup.scss
+++ b/resources/src/assets/scss/components/baths_popup.scss
@@ -36,6 +36,7 @@
         font-weight: 400;
         font-size: 20px;
         line-height: 160%;
+        min-width: 120px;
         @media only screen and (max-width: $px768) {
             padding: 5px 10px;
         }
