--- a/resources/src/assets/scss/sections/bath.scss
+++ b/resources/src/assets/scss/sections/bath.scss
@@ -15,7 +15,7 @@
       text-align: center;
       min-height: unset;
       height: unset;
-      padding-bottom: 136px;
+      // padding-bottom: 136px;
     }
 
 
