--- a/resources/src/assets/scss/sections/documents.scss
+++ b/resources/src/assets/scss/sections/documents.scss
@@ -1,8 +1,11 @@
+#documents {
+  background-color: #fff;
+}
+
 .documents {
   margin: 0 auto;
   padding-top: 70px;
   padding-bottom: 80px;
-  background-color: #fff;
 
   h2 {
     text-align: center;
