--- a/resources/src/assets/scss/sections/documents.scss
+++ b/resources/src/assets/scss/sections/documents.scss
@@ -1,8 +1,11 @@
 #documents {
+  transform: translateZ(-10px);
+  transform-style: preserve-3d;
   background-color: #fff;
 }
 
 .documents {
+  transform: translateZ(10px);
   margin: 0 auto;
   padding-top: 70px;
   padding-bottom: 80px;
