--- a/resources/src/assets/scss/components/baths_popup.scss
+++ b/resources/src/assets/scss/components/baths_popup.scss
@@ -1,26 +1,36 @@
+#bathPopUp {
+    height: 100vh;
+    max-height: 100vh;
+}
+
 .baths__popup {
     max-width: min(1260px, 90%);
     min-width: 530px;
-    // max-width: 80%;
+   
+
+
     @media only screen and (max-width: $px1024) {
         max-width: 100%;
         padding: 15px;
     }
 
+    p{
+        margin-top: 40px;
+    }
 
     h2 {
         text-align: center;
         margin-bottom: 40px;
-    }
+    }  
 
     table {
+        display: block;
         border-collapse: collapse;
         width: 100%;
-        margin-bottom: 40px;
-        
+        // margin-bottom: 40px;
+        max-height: 50vh;
 
         @media only screen and (max-width: $px1024) {
-            // word-wrap: break-word;
             word-break: break-all;
         }
     }
@@ -37,6 +47,7 @@
         font-size: 20px;
         line-height: 160%;
         min-width: 120px;
+
         @media only screen and (max-width: $px768) {
             padding: 5px 10px;
         }
