--- a/resources/src/assets/scss/sections/contacts.scss
+++ b/resources/src/assets/scss/sections/contacts.scss
@@ -1,4 +1,12 @@
+#contacts {
+  @media only screen and (max-width: $px768) {
+    padding: 0;
+  }
+}
+
 .contacts {
+
+  // padding: 0 20px;
   @media only screen and (max-width: $px768) {
     align-items: center;
     flex-direction: column;
@@ -6,7 +14,7 @@
 
   &__text {
     position: absolute;
-    top: 112px;
+    top: 30px;
     left: -1vw;
     display: flex;
     justify-content: center;
@@ -28,12 +36,38 @@
       padding: 70px 42px 80px;
       max-width: 530px;
       background-color: white;
+      border-radius: 10px;
+
+      &-phones {
+        display: flex;
+        flex-direction: column;
+        row-gap: 15px;
+
+        &-faild {
+          display: grid;
+          grid-template-columns: 100px auto;
+          column-gap: 30px;
+        }
+
+        p {
+          font-family: 'Open Sans';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 20px;
+          line-height: 160%;
+          color: #490D0C;
+        }
+      }
+
+      &-from {
+        margin-top: 30px;
+      }
 
       @media only screen and (max-width: $px768) {
-        position: absolute;
+        // position: absolute;
         width: 100vw;
         max-width: unset;
-        padding: 70px 20px 80px;
+        padding: 0 0 80px 20px;
       }
 
 
@@ -41,20 +75,21 @@
 
     h2 {
       margin-bottom: 40px;
+
       @media only screen and (max-width: $px480) {
         font-weight: 500;
-          font-size: 50px;
-          line-height: 130%;
+        font-size: 50px;
+        line-height: 130%;
       }
     }
 
-    a:first-of-type {
-      margin-bottom: 15px;
-    }
-
-    a:last-of-type {
-      margin-bottom: 30px;
-    }
+    //a:first-of-type {
+    //  margin-bottom: 15px;
+    //}
+    //
+    //a:last-of-type {
+    //  margin-bottom: 30px;
+    //}
   }
 
   &__map {
