--- a/resources/src/assets/scss/sections/bath.scss
+++ b/resources/src/assets/scss/sections/bath.scss
@@ -8,8 +8,11 @@
     background: rgba(243, 238, 235, 0.8);
     width: 100%;
     height: 610px;
-
+    border-radius: 0px 10px 10px 0px;
+    overflow: hidden;
+    
     @media (max-width: $bath-column) {
+      border-radius: 0px 0px 10px 10px ;
       flex-direction: column;
       align-items: center;
       text-align: center;
@@ -27,7 +30,7 @@
     flex: 1;
     padding: 40px 30px;
     position: relative;
-    
+
     @media (max-width: $bath-column) {
       width: 100%;
     }
@@ -98,6 +101,8 @@
   width: 100%;
   height: 100%;
   min-height: 610px;
+
+
 
   @media (max-width: $bath-column) {
     max-width: unset;
